--- a/script.ipynb
+++ b/script.ipynb
@@ -153,6 +153,120 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>tag_count</th>\n",
+       "      <th>body_len</th>\n",
+       "      <th>title_len</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>4.500000e+04</td>\n",
+       "      <td>45000.000000</td>\n",
+       "      <td>45000.000000</td>\n",
+       "      <td>45000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>4.575616e+07</td>\n",
+       "      <td>2.653889</td>\n",
+       "      <td>1003.785689</td>\n",
+       "      <td>53.779689</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>7.120035e+06</td>\n",
+       "      <td>1.204084</td>\n",
+       "      <td>1550.689681</td>\n",
+       "      <td>22.156292</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>3.455266e+07</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>33.000000</td>\n",
+       "      <td>15.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>3.973593e+07</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>332.000000</td>\n",
+       "      <td>38.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>4.503563e+07</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>595.000000</td>\n",
+       "      <td>50.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>5.125584e+07</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>1103.000000</td>\n",
+       "      <td>65.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>6.046802e+07</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>36721.000000</td>\n",
+       "      <td>150.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 id     tag_count      body_len     title_len\n",
+       "count  4.500000e+04  45000.000000  45000.000000  45000.000000\n",
+       "mean   4.575616e+07      2.653889   1003.785689     53.779689\n",
+       "std    7.120035e+06      1.204084   1550.689681     22.156292\n",
+       "min    3.455266e+07      1.000000     33.000000     15.000000\n",
+       "25%    3.973593e+07      2.000000    332.000000     38.000000\n",
+       "50%    4.503563e+07      3.000000    595.000000     50.000000\n",
+       "75%    5.125584e+07      3.000000   1103.000000     65.000000\n",
+       "max    6.046802e+07      6.000000  36721.000000    150.000000"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -664,18 +778,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Lets now store the document term matrix in a dictionary.\n",
+    "tags = vectorizer.get_feature_names()\n",
     "freqs = tag_dtm.sum(axis=0).A1\n",
     "result = dict(zip(tags, freqs))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +871,7 @@
        "4     .net-1.1       1"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -883,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +1019,7 @@
     "plt.tight_layout()\n",
     "\n",
     "df.groupby('y').count()['id'].plot(kind = 'pie', ax = axes[0], labels = ['High Quality', 'Low Quality (Closed)', 'Low Quality (Multiple Edits)'])\n",
-    "sns.countplot(x = train['y'], hue = train['y'], ax = axes[1])\n",
+    "sns.countplot(x = df['y'], hue = df['y'], ax = axes[1])\n",
     "\n",
     "axes[0].set_ylabel('')\n",
     "axes[1].set_ylabel('')\n",
