Read CSV modified

--- a/script.ipynb
+++ b/script.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,18 +94,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\SIDDHA~1\\AppData\\Local\\Temp/ipykernel_15924/2968850371.py:3: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
+      "  df.columns = df.columns.str.strip().str.lower().str.replace(' ', '_').str.replace('(', '').str.replace(')', '')\n"
+     ]
+    }
+   ],
    "source": [
     "#Read the dataset\n",
-    "df = pd.read_csv('dataset.csv')\n",
+    "df = pd.read_csv('https://github.com/SiddharthS7/stackoverflow-questions-tag-analysis/blob/main/dataset.csv?raw=true')\n",
     "df.columns = df.columns.str.strip().str.lower().str.replace(' ', '_').str.replace('(', '').str.replace(')', '')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
